Import translations. DO NOT MERGE ANYWHERE
Auto-generated-cl: translation import
Change-Id: Iec619125c681e660b3e1b268207e946aa9df13df

--- a/res/values-cs/strings.xml
+++ b/res/values-cs/strings.xml
@@ -3005,7 +3005,7 @@
     <string name="spatial_audio_speaker" msgid="9145233652433523302">"Reproduktor telefonu"</string>
     <string name="spatial_audio_wired_headphones" msgid="2237355789145828648">"Sluchátka s kabelem"</string>
     <string name="spatial_audio_text" msgid="8201387855375146000">"Zvuk z kompatibilních médií bude realističtější"</string>
-    <string name="spatial_summary_off" msgid="8272678804629774378">"Vypnuto"</string>
+    <string name="spatial_summary_off" msgid="8272678804629774378">"Vypnutý"</string>
     <string name="spatial_summary_on_one" msgid="6239933399496282994">"Zapnuto / <xliff:g id="OUTPUT_DEVICE">%1$s</xliff:g>"</string>
     <string name="spatial_summary_on_two" msgid="4526919818832483883">"Zapnuto / <xliff:g id="OUTPUT_DEVICE_0">%1$s</xliff:g> a <xliff:g id="OUTPUT_DEVICE_1">%2$s</xliff:g>"</string>
     <string name="spatial_audio_footer_title" msgid="8775010547623606088">"Prostorový zvuk můžete zapnout také pro zařízení Bluetooth."</string>
