--- a/res/values-gl/strings.xml
+++ b/res/values-gl/strings.xml
@@ -3005,7 +3005,7 @@
     <string name="spatial_audio_speaker" msgid="9145233652433523302">"Altofalante do teléfono"</string>
     <string name="spatial_audio_wired_headphones" msgid="2237355789145828648">"Auriculares con cable"</string>
     <string name="spatial_audio_text" msgid="8201387855375146000">"O audio dos contidos multimedia compatibles ofréceche unha experiencia máis envolvente"</string>
-    <string name="spatial_summary_off" msgid="8272678804629774378">"Opción desactivada"</string>
+    <string name="spatial_summary_off" msgid="8272678804629774378">"Desactivado"</string>
     <string name="spatial_summary_on_one" msgid="6239933399496282994">"Opción activada/<xliff:g id="OUTPUT_DEVICE">%1$s</xliff:g>"</string>
     <string name="spatial_summary_on_two" msgid="4526919818832483883">"Opción activada / <xliff:g id="OUTPUT_DEVICE_0">%1$s</xliff:g> e <xliff:g id="OUTPUT_DEVICE_1">%2$s</xliff:g>"</string>
     <string name="spatial_audio_footer_title" msgid="8775010547623606088">"Tamén podes activar o audio espacial para dispositivos Bluetooth."</string>
@@ -4718,7 +4718,7 @@
     <string name="color_selector_dialog_cancel" msgid="8667350644753900701">"Cancelar"</string>
     <string name="contrast_title" msgid="6885768151336508075">"Contraste"</string>
     <string name="contrast_standard" msgid="1097297089917185235">"Nivel estándar"</string>
-    <string name="contrast_medium" msgid="384414510709285811">"Nivel medio"</string>
-    <string name="contrast_high" msgid="3988567609694797696">"Nivel alto"</string>
+    <string name="contrast_medium" msgid="384414510709285811">"Medio"</string>
+    <string name="contrast_high" msgid="3988567609694797696">"Alto"</string>
     <string name="dock_multi_instances_not_supported_text" msgid="3513493664467667084">"Esta aplicación só se pode abrir en 1 ventá"</string>
 </resources>
