--- a/res/values-ky/strings.xml
+++ b/res/values-ky/strings.xml
@@ -2097,7 +2097,7 @@
     <string name="accessibility_service_screen_control_description" msgid="8431940515157990426">"Кызмат экрандагы нерселерди окуп, аларды башка колдонмолордун үстүнөн көрсөтөт."</string>
     <string name="accessibility_service_action_perform_title" msgid="1449360056585337833">"Аракеттерди көрүп, аткаруу"</string>
     <string name="accessibility_service_action_perform_description" msgid="7807832069800034738">"Кызмат колдонмодо жасаган аракеттериңизге же түзмөктүн сенсорлоруна көз салып, сиздин атыңыздан буйруктарды берет."</string>
-    <string name="accessibility_dialog_button_allow" msgid="8274918676473216697">"Уруксат берүү"</string>
+    <string name="accessibility_dialog_button_allow" msgid="8274918676473216697">"Ооба"</string>
     <string name="accessibility_dialog_button_deny" msgid="2037249860078259284">"Жок"</string>
     <string name="accessibility_dialog_button_stop" msgid="7295448112784528196">"Токтотуу"</string>
     <string name="accessibility_dialog_button_cancel" msgid="4813234247237851121">"Жок"</string>
@@ -2415,10 +2415,10 @@
     <string name="certificate_warning_dont_install" msgid="3794366420884560605">"Орнотулбасын"</string>
     <string name="certificate_warning_install_anyway" msgid="4633118283407228740">"Баары бир орнотулсун"</string>
     <string name="cert_not_installed" msgid="6725137773549974522">"Тастыктама орнотулган жок"</string>
-    <string name="request_manage_credentials_title" msgid="596805634568013413"><b>"<xliff:g id="APP_NAME">^1</xliff:g>"</b>" колдонмосуна ушул түзмөктө тастыктамаларды орнотууга уруксат берилсинби?"</string>
+    <string name="request_manage_credentials_title" msgid="596805634568013413"><b>"<xliff:g id="APP_NAME">^1</xliff:g>"</b>" колдонмосуна ушул түзмөктө тастыктамаларды орнотууга уруксат бересизби?"</string>
     <string name="request_manage_credentials_description" msgid="8044839857171509619">"Бул тастыктамалар түзмөгүңүздүн өзгөчө идентификаторун төмөндөгү колдонмолор жана URL даректери менен бөлүшүп, сиз экениңизди ырастоо мүмкүнчүлүгүн берет"</string>
     <string name="request_manage_credentials_dont_allow" msgid="3630610197644877809">"Уруксат берилбесин"</string>
-    <string name="request_manage_credentials_allow" msgid="4910940118408348245">"Уруксат берүү"</string>
+    <string name="request_manage_credentials_allow" msgid="4910940118408348245">"Ооба"</string>
     <string name="request_manage_credentials_more" msgid="6101210283534101582">"Көбүрөөк көрсөтүү"</string>
     <string name="certificate_management_app" msgid="8086699498358080826">"Тастыктамаларды башкарган колдонмо"</string>
     <string name="no_certificate_management_app" msgid="3025739370424406717">"Жок"</string>
@@ -2463,7 +2463,7 @@
     <string name="device_admin_warning_simplified" msgid="2715756519899116115">"Бул түзмөк <xliff:g id="APP_NAME">%1$s</xliff:g> аркылуу башкарылып, көзөмөлдөнөт."</string>
     <string name="device_admin_status" msgid="6332571781623084064">"Түзмөктү башкарган колдонмо иштетилип, <xliff:g id="APP_NAME">%1$s</xliff:g> төмөнкү аракеттерди аткара алат:"</string>
     <string name="profile_owner_add_title" msgid="2774489881662331549">"Профиль башкаргычы жандырылсынбы?"</string>
-    <string name="profile_owner_add_title_simplified" msgid="2320828996993774182">"Көзөмөлгө уруксат берилсинби?"</string>
+    <string name="profile_owner_add_title_simplified" msgid="2320828996993774182">"Көзөмөлгө уруксат бересизби?"</string>
     <string name="adding_profile_owner_warning" msgid="6868275476058020513">"Улантсаңыз, профилиңизди администратор башкарып, ал жеке дайын-даректериңиз менен кошо башка тийиштүү маалыматтарды да сактап турат.\n\nАдминистратор бул колдонуучунун параметрлерин, кирүү мүмкүнчүлүгүн, колдонмолорду жана маалыматтарды, ошондой эле тармактагы аракеттер менен түзмөгүңүздүн жайгашкан жери тууралуу маалыматты көзөмөлдөп, башкара алат."</string>
     <string name="admin_disabled_other_options" msgid="8122039047419172139">"Башка параметрлерди администратор өчүрүп койгон"</string>
     <string name="admin_more_details" msgid="4928985331640193758">"Кененирээк"</string>
@@ -4234,7 +4234,7 @@
     <string name="carrier_settings_title" msgid="6959295328730560529">"Оператордун параметрлери"</string>
     <string name="cdma_lte_data_service" msgid="6937443423651347345">"Тарифтик планды жөндөө"</string>
     <string name="mobile_data_settings_title" msgid="3927524078598009792">"Мобилдик Интернет"</string>
-    <string name="mobile_data_settings_summary" msgid="7323978798199919063">"Интернетке мобилдик тармак аркылуу чыгуу"</string>
+    <string name="mobile_data_settings_summary" msgid="7323978798199919063">"Интернетке мобилдик тармак аркылуу чыгасыз"</string>
     <string name="mobile_data_settings_summary_auto_switch" msgid="7851549787645698945">"Тейлөө аймагына келгенде, телефон автоматтык түрдө бул операторго которулат"</string>
     <string name="mobile_data_settings_summary_unavailable" msgid="9176513507571883986">"SIM карта жеткиликсиз"</string>
     <string name="calls_preference" msgid="2166481296066890129">"Чалуулардын параметрлери"</string>
@@ -4520,10 +4520,10 @@
     <string name="reset_importance_completed" msgid="3595536767426097205">"Билдирмелердин маанилүүлүгүн баштапкы абалга келтирүү аяктады."</string>
     <string name="apps_dashboard_title" msgid="3269953499954393706">"Колдонмолор"</string>
     <string name="bluetooth_message_access_notification_content" msgid="5111712860712823893">"Түзмөк билдирүүлөрүңүздү көргөнү жатат. Чоо-жайын көрүү үчүн таптап коюңуз."</string>
-    <string name="bluetooth_message_access_dialog_title" msgid="9009836130395061579">"Билдирүүлөрдү көрүүгө уруксат берилсинби?"</string>
+    <string name="bluetooth_message_access_dialog_title" msgid="9009836130395061579">"Билдирүүлөрдү көрүүгө уруксат бересизби?"</string>
     <string name="bluetooth_message_access_dialog_content" msgid="7186694737578788487">"Bluetooth түзмөгү (<xliff:g id="DEVICE_NAME_0">%1$s</xliff:g>) билдирүүлөрүңүздү көргөнү жатат.\n\n<xliff:g id="DEVICE_NAME_1">%2$s</xliff:g> түзмөгүнө буга чейин туташкан эмессиз."</string>
     <string name="bluetooth_phonebook_access_notification_content" msgid="9175220052703433637">"Түзмөк байланыштарыңызды жана чалуулар тизмесин көргөнү жатат. Чоо-жайын көрүү үчүн таптап коюңуз."</string>
-    <string name="bluetooth_phonebook_access_dialog_title" msgid="7624607995928968721">"Байланыштар менен чалуулар тизмесин көрүүгө уруксат берилсинби?"</string>
+    <string name="bluetooth_phonebook_access_dialog_title" msgid="7624607995928968721">"Байланыштар менен чалуулар тизмесин көрүүгө уруксат бересизби?"</string>
     <string name="bluetooth_phonebook_access_dialog_content" msgid="959658135522249170">"Bluetooth түзмөгү (<xliff:g id="DEVICE_NAME_0">%1$s</xliff:g>) байланыштарыңызды жана чалуулар тизмесин көргөнү жатат. Буга кирүүчү жана чыгуучу чалуулар кирет.\n\n<xliff:g id="DEVICE_NAME_1">%2$s</xliff:g> түзмөгүнө буга чейин туташкан эмессиз."</string>
     <string name="category_name_brightness" msgid="8520372392029305084">"Жарыктыгы"</string>
     <string name="category_name_lock_display" msgid="8310402558217129670">"Экранды кулпулоо"</string>
