--- a/res/values-mk/strings.xml
+++ b/res/values-mk/strings.xml
@@ -4717,8 +4717,8 @@
     <string name="color_selector_dialog_done" msgid="121253968943363376">"Готово"</string>
     <string name="color_selector_dialog_cancel" msgid="8667350644753900701">"Откажи"</string>
     <string name="contrast_title" msgid="6885768151336508075">"Контраст"</string>
-    <string name="contrast_standard" msgid="1097297089917185235">"Стандарден"</string>
-    <string name="contrast_medium" msgid="384414510709285811">"Среден"</string>
-    <string name="contrast_high" msgid="3988567609694797696">"Висок"</string>
+    <string name="contrast_standard" msgid="1097297089917185235">"Стандардно"</string>
+    <string name="contrast_medium" msgid="384414510709285811">"Средно"</string>
+    <string name="contrast_high" msgid="3988567609694797696">"Високо"</string>
     <string name="dock_multi_instances_not_supported_text" msgid="3513493664467667084">"Апликацијава може да се отвори само во еден прозорец"</string>
 </resources>
