--- a/res/values-ml/strings.xml
+++ b/res/values-ml/strings.xml
@@ -2189,13 +2189,13 @@
     <string name="packages_subtitle" msgid="8687690644931499428">"ഉൾപ്പെടുത്തിയ പാക്കേജുകൾ"</string>
     <string name="battery_tip_summary_title" msgid="321127485145626939">"ആപ്പുകൾ സാധാരണ രീതിയിൽ റൺ ചെയ്യുന്നു"</string>
     <string name="battery_tip_low_battery_title" msgid="4155239078744100997">"ബാറ്ററി നില കുറവാണ്"</string>
-    <string name="battery_tip_low_battery_summary" msgid="2629633757244297436">"ബാറ്ററി ലെെഫ് വർദ്ധിപ്പിക്കാൻ ബാറ്ററി ലാഭിക്കൽ ഓണാക്കുക"</string>
+    <string name="battery_tip_low_battery_summary" msgid="2629633757244297436">"ബാറ്ററി ലെെഫ് വർദ്ധിപ്പിക്കാൻ ബാറ്ററി സേവർ ഓണാക്കുക"</string>
     <string name="battery_tip_smart_battery_title" msgid="8925025450214912325">"ബാറ്ററി ലെെഫ് മെച്ചപ്പെടുത്തുക"</string>
     <string name="battery_tip_smart_battery_summary" msgid="3592965553502362965">"ബാറ്ററി മാനേജർ ഓണാക്കുക"</string>
     <string name="battery_tip_early_heads_up_title" msgid="4411387863476629452">"ബാറ്ററി ലാഭിക്കൽ ഓണാക്കുക"</string>
     <string name="battery_tip_early_heads_up_summary" msgid="578523794827443977">"സാധാരണയിലും നേരത്തെ ബാറ്ററി ചാർജ് തീർന്നേക്കാം"</string>
-    <string name="battery_tip_early_heads_up_done_title" msgid="7705597228709143337">"ബാറ്ററി ലാഭിക്കൽ ഓണാണ്"</string>
-    <string name="battery_saver_link_a11y" msgid="6613079613524512257">"ബാറ്ററി ലാഭിക്കലിനെ കുറിച്ച് കൂടുതലറിയുക"</string>
+    <string name="battery_tip_early_heads_up_done_title" msgid="7705597228709143337">"ബാറ്ററി സേവർ ഓണാണ്"</string>
+    <string name="battery_saver_link_a11y" msgid="6613079613524512257">"ബാറ്ററി സേവറിനെ കുറിച്ച് കൂടുതലറിയുക"</string>
     <string name="battery_tip_early_heads_up_done_summary" msgid="7858923105760361208">"ചില ഫീച്ചറുകൾ പരിമിതപ്പെടാം"</string>
     <string name="battery_tip_high_usage_title" msgid="9110720762506146697">"ഉയർന്ന ബാറ്ററി ഉപയോഗം"</string>
     <string name="battery_tip_high_usage_summary" msgid="3938999581403084551">"ഉയർന്ന ഉപയോഗമുള്ള ആപ്പുകൾ കാണുക"</string>
@@ -2284,7 +2284,7 @@
     <string name="battery_saver_turn_on_summary" msgid="1433919417587171160">"ബാറ്ററി ലൈഫ് നീട്ടുക"</string>
     <string name="battery_saver_sticky_title_new" msgid="5942813274115684599">"ചാർജായാൽ ഓഫാക്കുക"</string>
     <string name="battery_saver_sticky_title_percentage" msgid="1178162022087559148">"<xliff:g id="BATTERY_PERCENTAGE">%1$s</xliff:g> ആകുമ്പോൾ ഓഫാക്കുക"</string>
-    <string name="battery_saver_sticky_description_new" msgid="6472610662679038342">"ബാറ്ററി ചാർജ് <xliff:g id="BATTERY_PERCENTAGE">%1$s</xliff:g> ആകുമ്പോൾ ബാറ്ററി ലാഭിക്കൽ ഓഫാകും"</string>
+    <string name="battery_saver_sticky_description_new" msgid="6472610662679038342">"ബാറ്ററി ചാർജ് <xliff:g id="BATTERY_PERCENTAGE">%1$s</xliff:g> ആകുമ്പോൾ ബാറ്ററി സേവർ ഓഫാകും"</string>
     <!-- no translation found for battery_saver_seekbar_title (3712266470054006641) -->
     <skip />
     <string name="battery_saver_seekbar_title_placeholder" msgid="7141264642540687540">"ഓണാക്കുക"</string>
@@ -2885,7 +2885,7 @@
     <string name="keywords_storage" msgid="3004667910133021783">"ഇടം, ഡിസ്‌ക്, ഹാർഡ് ഡ്രൈവ്, ഉപകരണ ഉപയോഗം"</string>
     <string name="keywords_battery" msgid="7040323668283600530">"പവർ ഉപയോഗം, നിരക്ക്"</string>
     <string name="keywords_battery_usage" msgid="1763573071014260220">"ബാറ്ററി ഉപയോഗം കാണുക, ബാറ്ററി ഉപയോഗം, ഊർജ്ജ ഉപയോഗം"</string>
-    <string name="keywords_battery_saver" msgid="6289682844453234359">"ബാറ്ററി ലാഭിക്കൽ, ഊർജ്ജം ലാഭിക്കൽ, ലാഭിക്കൽ"</string>
+    <string name="keywords_battery_saver" msgid="6289682844453234359">"ബാറ്ററി സേവർ, ഊർജ്ജം ലാഭിക്കൽ, ലാഭിക്കൽ"</string>
     <string name="keywords_battery_adaptive_preferences" msgid="1774870663426502938">"അഡാപ്റ്റീവ് മുൻഗണനകൾ, അഡാപ്റ്റീവ് ബാറ്ററി"</string>
     <string name="keywords_spell_checker" msgid="5148906820603481657">"സ്പെല്ലിംഗ്, നിഘണ്ടു, അക്ഷര‌പ്പിശക് പരിശോധന, സ്വയം തിരുത്തൽ"</string>
     <string name="keywords_voice_input" msgid="7534900094659358971">"തിരിച്ചറിയൽ സംവിധാനം, ഇൻപുട്ട്, സംഭാഷണം, സംസാരിക്കുക, ഭാഷ, ഹാൻഡ്സ്-ഫ്രീ, ഹാൻഡ് ഫ്രീ, തിരിച്ചറിയൽ, നിന്ദ്യം, പദം, ഓഡിയോ, ചരിത്രം, bluetooth ഹെഡ്‌സെറ്റ്"</string>
@@ -3877,9 +3877,9 @@
     <string name="bluetooth_connected_multiple_devices_summary" msgid="2294954614327771844">"ഒന്നിലധികം ഉപകരണങ്ങളിൽ കണക്‌റ്റുചെയ്‌തു"</string>
     <string name="demo_mode" msgid="6566167465451386728">"സിസ്റ്റം UI ഡെമോ മോഡ്"</string>
     <string name="dark_ui_mode" msgid="898146394425795281">"ഡാർക്ക് തീം"</string>
-    <string name="dark_ui_mode_disabled_summary_dark_theme_on" msgid="4554134480159161533">"ബാറ്ററി ലാഭിക്കൽ കാരണം തൽക്കാലം പ്രവർത്തനരഹിതമാണ്"</string>
-    <string name="ambient_camera_summary_battery_saver_on" msgid="1787784892047029560">"ബാറ്ററി ലാഭിക്കൽ കാരണം തൽക്കാലം പ്രവർത്തനരഹിതമാണ്"</string>
-    <string name="ambient_camera_battery_saver_off" msgid="689825730569761613">"ബാറ്ററി ലാഭിക്കൽ ഓഫാക്കുക"</string>
+    <string name="dark_ui_mode_disabled_summary_dark_theme_on" msgid="4554134480159161533">"ബാറ്ററി സേവർ കാരണം തൽക്കാലം പ്രവർത്തനരഹിതമാണ്"</string>
+    <string name="ambient_camera_summary_battery_saver_on" msgid="1787784892047029560">"ബാറ്ററി സേവർ കാരണം തൽക്കാലം പ്രവർത്തനരഹിതമാണ്"</string>
+    <string name="ambient_camera_battery_saver_off" msgid="689825730569761613">"ബാറ്ററി സേവർ ഓഫാക്കുക"</string>
     <string name="dark_ui_mode_disabled_summary_dark_theme_off" msgid="4154227921313505702">"ബാറ്ററി ലാഭിക്കൽ കാരണം താൽക്കാലികമായി ഓണാക്കി"</string>
     <string name="dark_theme_slice_title" msgid="4684222119481114062">"ഡാർക്ക് തീം പരീക്ഷിക്കുക"</string>
     <string name="dark_theme_slice_subtitle" msgid="5555724345330434268">"ബാറ്ററി ലെെഫ് വർദ്ധിപ്പിക്കാൻ സഹായിക്കുന്നു"</string>
