--- a/res/values-nl/strings.xml
+++ b/res/values-nl/strings.xml
@@ -3433,7 +3433,7 @@
     <string name="zen_mode_bypassing_apps_title" msgid="371050263563164059">"Apps"</string>
     <string name="zen_mode_bypassing_app_channels_header" msgid="4011017798712587373">"Meldingen die mogen onderbreken"</string>
     <string name="zen_mode_bypassing_app_channels_toggle_all" msgid="1449462656358219116">"Alle meldingen toestaan"</string>
-    <string name="zen_mode_other_sounds_summary" msgid="8784400697494837032">"{count,plural,offset:2 =0{Niets mag onderbreken}=1{{sound_category_1} mag onderbreken}=2{{sound_category_1} en {sound_category_2} mogen onderbreken}=3{{sound_category_1}, {sound_category_2} en {sound_category_3} mogen onderbreken}other{{sound_category_1}, {sound_category_2} en nog # mogen onderbreken}}"</string>
+    <string name="zen_mode_other_sounds_summary" msgid="8784400697494837032">"{count,plural,offset:2 =0{Niets mag je storen}=1{{sound_category_1} mag je storen}=2{{sound_category_1} en {sound_category_2} mogen je storen}=3{{sound_category_1}, {sound_category_2} en {sound_category_3} mogen je storen}other{{sound_category_1}, {sound_category_2} en nog # mogen je storen}}"</string>
     <string name="zen_mode_sounds_none" msgid="6557474361948269420">"Niets mag onderbreken"</string>
     <string name="zen_mode_people_none" msgid="4613147461974255046">"Niemand mag onderbreken"</string>
     <string name="zen_mode_people_some" msgid="9101872681298810281">"Bepaalde mensen mogen je storen"</string>
