--- a/res/values-uk/strings.xml
+++ b/res/values-uk/strings.xml
@@ -1637,7 +1637,7 @@
     <string name="languages_settings" msgid="5784775502251770671">"Мови"</string>
     <string name="keyboard_settings" msgid="184185708597386454">"Клавіатура"</string>
     <string name="language_empty_list_user_restricted" msgid="8050367405839231863">"У вас немає дозволу змінювати мову пристрою."</string>
-    <string name="language_keyboard_settings_title" msgid="7934844313233544557">"Мова та введення"</string>
+    <string name="language_keyboard_settings_title" msgid="7934844313233544557">"Мова й введення"</string>
     <string name="input_assistance" msgid="3437568284144952104">"Інструменти"</string>
     <string name="keyboard_settings_category" msgid="5392847229300117064">"Клавіатура та методи введення"</string>
     <string name="system_language" msgid="1146762166579643257">"Мови системи"</string>
