--- a/res/values-ne/strings.xml
+++ b/res/values-ne/strings.xml
@@ -1948,7 +1948,7 @@
     <string name="accessibility_autoclick_medium_summary" msgid="1343390686514222871">"०.६ सेकेन्ड"</string>
     <string name="accessibility_autoclick_long_title" msgid="6799311820641687735">"लामो"</string>
     <string name="accessibility_autoclick_long_summary" msgid="3747153151313563637">"१ सेकेन्ड"</string>
-    <string name="accessibility_autoclick_custom_title" msgid="4597792235546232038">"आफू अनुकूल"</string>
+    <string name="accessibility_autoclick_custom_title" msgid="4597792235546232038">" कस्टम"</string>
     <string name="accessibility_autoclick_shorter_desc" msgid="7631013255724544348">"अझ छोटो"</string>
     <string name="accessibility_autoclick_longer_desc" msgid="2566025502981487443">"अझ लामो"</string>
     <string name="accessibility_autoclick_seekbar_desc" msgid="8363959277814621118">"स्वतः क्लिक हुने समय"</string>
@@ -2063,7 +2063,7 @@
     <string name="captioning_locale" msgid="5533303294290661590">"भाषा"</string>
     <string name="captioning_text_size" msgid="8039448543171463017">"टेक्स्टको आकार"</string>
     <string name="captioning_preset" msgid="4174276086501638524">"क्याप्सनको शैली"</string>
-    <string name="captioning_custom_options_title" msgid="3858866498893566351">"आफू अनुकूल विकल्प"</string>
+    <string name="captioning_custom_options_title" msgid="3858866498893566351">" कस्टम विकल्प"</string>
     <string name="captioning_background_color" msgid="5231412761368883107">"पृष्ठभूमि रङ्ग"</string>
     <string name="captioning_background_opacity" msgid="6453738649182382614">"पृष्ठभूमि अपारदर्शकता"</string>
     <string name="captioning_window_color" msgid="1406167274530183119">"क्याप्सन विन्डोको रङ्ग"</string>
@@ -2879,7 +2879,7 @@
     <string name="keywords_display" msgid="874738809280751745">"स्क्रिन, टचस्क्रिन"</string>
     <string name="keywords_display_brightness_level" msgid="850742707616318056">"मधुरो स्क्रिन, टचस्क्रिन, ब्याट्री, चहकिलो"</string>
     <string name="keywords_display_night_display" msgid="4711054330804250058">"मधुरो स्क्रिन, रात, टिन्ट, रात्रि ड्युटी, उज्यालोपन, स्क्रिनको रङ्ग, रङ्ग"</string>
-    <string name="keywords_display_wallpaper" msgid="8478137541939526564">"पृष्ठभूमि, निजीकृत गर्नुहोस्, प्रदर्शन आफू अनुकूल गर्नुहोस्"</string>
+    <string name="keywords_display_wallpaper" msgid="8478137541939526564">"पृष्ठभूमि, निजीकृत गर्नुहोस्, प्रदर्शन  कस्टम गर्नुहोस्"</string>
     <string name="keywords_display_font_size" msgid="3593317215149813183">"टेक्स्टको आकार"</string>
     <string name="keywords_display_cast_screen" msgid="2572331770299149370">"परियोजना, कास्ट, स्क्रिनको प्रतिविम्ब बनाउने, स्क्रिन आदान प्रदान गर्ने, प्रतिविम्ब बनाउने, स्क्रिन आदान प्रदान, स्क्रिन कास्टिङ"</string>
     <string name="keywords_storage" msgid="3004667910133021783">"ठाउँ, डिस्क, हार्ड ड्राइभ, यन्त्र उपयोग"</string>
@@ -3040,8 +3040,8 @@
     <string name="zen_mode_restrict_notifications_hide_summary" msgid="6005445725686969583">"तपाईं सूचनाहरू देख्न वा सुन्न सक्नु हुने छैन।"</string>
     <string name="zen_mode_restrict_notifications_hide_footer" msgid="3761837271201073330">"तपाईंको फोनले नयाँ वा हालका सूचनाहरू देखाउँदैन र नयाँ सूचना आउँदा भाइब्रेट गर्दैन वा आवाज आउँदैन। डिभाइसको क्रियाकलाप वा स्थितिसम्बन्धी महत्त्वपूर्ण सूचनाहरू देखिने क्रम भने जारी नै रहने छ भन्ने कुरा ख्याल गर्नुहोस्।\n\nतपाईंले Do Not Disturb अफ गरेका बेला तपाईं आफ्नो स्क्रिनको सिरानबाट पुछारतर्फ स्वाइप गरी छुटेका सूचनाहरू भेट्टाउन सक्नुहुन्छ।"</string>
     <string name="zen_mode_restrict_notifications_custom" msgid="5469078057954463796">"कस्टम"</string>
-    <string name="zen_mode_restrict_notifications_enable_custom" msgid="4303255634151330401">"आफू अनुकूल सेटिङ सक्षम पार्नुहोस्‌"</string>
-    <string name="zen_mode_restrict_notifications_disable_custom" msgid="5062332754972217218">"आफू अनुकूल सेटिङ हटाउनुहोस्‌"</string>
+    <string name="zen_mode_restrict_notifications_enable_custom" msgid="4303255634151330401">" कस्टम सेटिङ सक्षम पार्नुहोस्‌"</string>
+    <string name="zen_mode_restrict_notifications_disable_custom" msgid="5062332754972217218">" कस्टम सेटिङ हटाउनुहोस्‌"</string>
     <string name="zen_mode_restrict_notifications_summary_muted" msgid="4750213316794189968">"सूचना आउँदा साउन्ड नआओस्"</string>
     <string name="zen_mode_restrict_notifications_summary_custom" msgid="3918461289557316364">"आंशिक रूपमा लुकेको"</string>
     <string name="zen_mode_restrict_notifications_summary_hidden" msgid="636494600775773296">" सूचना आउँदा भिजुअल वा साउन्ड नआओस्"</string>
@@ -3073,7 +3073,7 @@
     <string name="zen_mode_settings_dnd_manual_indefinite" msgid="1436568478062106132">"तपाईंले अफ नगरेसम्म \'बाधा नपुर्‍याउनुहोस्\' मोड अन रहने छ"</string>
     <string name="zen_mode_settings_dnd_automatic_rule" msgid="1958092329238152236">"(<xliff:g id="RULE_NAME">%s</xliff:g>) नामक समयतालिकाले बाधा नपुर्‍याउनुहोस् नामक मोडलाई स्वतः सक्रिय गरेको थियो"</string>
     <string name="zen_mode_settings_dnd_automatic_rule_app" msgid="3401685760954156067">"कुनै एप <xliff:g id="APP_NAME">%s</xliff:g> ले बाधा नपुर्‍याउनुहोस् नामक मोडलाई स्वतः सक्रिय गर्‍यो"</string>
-    <string name="zen_mode_settings_dnd_custom_settings_footer" msgid="6566115866660865385">"बाधा नपुऱ्याउनुहोस् नामक मोड आफू अनुकूल सेटिङहरू भएका <xliff:g id="RULE_NAMES">%s</xliff:g> का लागि सक्रिय छ।"</string>
+    <string name="zen_mode_settings_dnd_custom_settings_footer" msgid="6566115866660865385">"बाधा नपुऱ्याउनुहोस् नामक मोड  कस्टम सेटिङहरू भएका <xliff:g id="RULE_NAMES">%s</xliff:g> का लागि सक्रिय छ।"</string>
     <string name="zen_mode_settings_dnd_custom_settings_footer_link" msgid="8255159194653341835">" "<annotation id="link">"आफ्नो रोजाइअनुसारका सेटिङ हेर्नुहोस्"</annotation></string>
     <string name="zen_interruption_level_priority" msgid="4854123502362861192">"प्राथमिकता दिइएको मात्र"</string>
     <string name="zen_mode_and_condition" msgid="8580896862841920031">"<xliff:g id="ZEN_MODE">%1$s</xliff:g>। <xliff:g id="EXIT_CONDITION">%2$s</xliff:g>"</string>
@@ -3092,7 +3092,7 @@
     <string name="zen_category_duration" msgid="7515850842082631460">"द्रुत सेटिङहरूको अवधि"</string>
     <string name="zen_settings_general" msgid="2704932194620124153">"सामान्य"</string>
     <string name="zen_sound_footer" msgid="4090291351903631977">"बाधा नपुर्‍याउनुहोस् मोड सक्रिय भएका बेला तपाईंले माथि अनुमति दिनुभएका वस्तुहरूबाहेक आवाज तथा कम्पनलाई म्युट गरिने छ।"</string>
-    <string name="zen_custom_settings_dialog_title" msgid="4613603772432720380">"आफू अनुकूल सेटिङहरू"</string>
+    <string name="zen_custom_settings_dialog_title" msgid="4613603772432720380">" कस्टम सेटिङहरू"</string>
     <string name="zen_custom_settings_dialog_review_schedule" msgid="4674671820584759928">"समयतालिकाको समीक्षा गर्नुहोस्"</string>
     <string name="zen_custom_settings_dialog_ok" msgid="8842373418878278246">"बुझेँ"</string>
     <string name="zen_custom_settings_notifications_header" msgid="7635280645171095398">"सूचनाहरू"</string>
@@ -3345,9 +3345,9 @@
     <string name="zen_mode_choose_rule_type" msgid="7656308563653982975">"समयतालिकाको प्रकार छनौट गर्नुहोस्‌"</string>
     <string name="zen_mode_delete_rule_confirmation" msgid="6195069346439736688">"\"<xliff:g id="RULE">%1$s</xliff:g>\"सम्बन्धी नियम मेटाउने हो?"</string>
     <string name="zen_mode_delete_rule_button" msgid="8328729110756882244">"मेटाउनुहोस्"</string>
-    <string name="zen_mode_app_set_behavior" msgid="4319517270279704677">"अहिले यी सेटिङहरूलाई परिवर्तन गर्न सकिँदैन। कुनै एपले (<xliff:g id="APP_NAME">%1$s</xliff:g>) आफू अनुकूल पारिएको व्यवहारमार्फत बाधा नपुर्‍याउनुहोस् नामक मोडलाई स्वतः सक्रिय गरेको छ।"</string>
-    <string name="zen_mode_unknown_app_set_behavior" msgid="8544413884273894104">"अहिले यी सेटिङहरूलाई परिवर्तन गर्न सकिँदैन। कुनै एपले आफू अनुकूल पारिएको व्यवहारमार्फत बाधा नपुर्‍याउनुहोस् नामक मोडलाई स्वतः सक्रिय गरेको छ।"</string>
-    <string name="zen_mode_qs_set_behavior" msgid="3805244555649172848">"अहिले यी सेटिङहरूलाई परिवर्तन गर्न सकिँदैन। आफू अनुकूल पारिएको व्यवहारमार्फत म्यानुअल रूपले बाधा नपुर्‍याउनुहोस् नामक मोडलाई सक्रिय गरिएको छ।"</string>
+    <string name="zen_mode_app_set_behavior" msgid="4319517270279704677">"अहिले यी सेटिङहरूलाई परिवर्तन गर्न सकिँदैन। कुनै एपले (<xliff:g id="APP_NAME">%1$s</xliff:g>)  कस्टम पारिएको व्यवहारमार्फत बाधा नपुर्‍याउनुहोस् नामक मोडलाई स्वतः सक्रिय गरेको छ।"</string>
+    <string name="zen_mode_unknown_app_set_behavior" msgid="8544413884273894104">"अहिले यी सेटिङहरूलाई परिवर्तन गर्न सकिँदैन। कुनै एपले  कस्टम पारिएको व्यवहारमार्फत बाधा नपुर्‍याउनुहोस् नामक मोडलाई स्वतः सक्रिय गरेको छ।"</string>
+    <string name="zen_mode_qs_set_behavior" msgid="3805244555649172848">"अहिले यी सेटिङहरूलाई परिवर्तन गर्न सकिँदैन।  कस्टम पारिएको व्यवहारमार्फत म्यानुअल रूपले बाधा नपुर्‍याउनुहोस् नामक मोडलाई सक्रिय गरिएको छ।"</string>
     <string name="zen_schedule_rule_type_name" msgid="8071428540221112090">"समय"</string>
     <string name="zen_event_rule_type_name" msgid="1921166617081971754">"कार्यक्रम"</string>
     <string name="zen_mode_event_rule_calendar" msgid="6279460374929508907">"निम्न एपको कार्यक्रम होइरहँदा"</string>
@@ -3839,7 +3839,7 @@
     <string name="notification_log_details_actions" msgid="2269605330470905236">"कारवाहीहरू"</string>
     <string name="notification_log_details_title" msgid="8365761340979164197">"शीर्षक"</string>
     <string name="notification_log_details_remoteinput" msgid="264204203044885921">"रिमोट इनपुटहरू"</string>
-    <string name="notification_log_details_content_view" msgid="7193602999512479112">"आफू अनुकूल दृश्य"</string>
+    <string name="notification_log_details_content_view" msgid="7193602999512479112">" कस्टम दृश्य"</string>
     <string name="notification_log_details_extras" msgid="8602887256103970989">"अतिरिक्त"</string>
     <string name="notification_log_details_icon" msgid="6728710746466389675">"आइकन"</string>
     <string name="notification_log_details_parcel" msgid="2098454650154230531">"पार्सलको आकार"</string>
