--- a/res/values-sw/strings.xml
+++ b/res/values-sw/strings.xml
@@ -149,7 +149,7 @@
     <string name="language_picker_category_title" msgid="1792199453060454565">"Mpangilio wa lugha unayopendelea"</string>
     <string name="desc_current_default_language" msgid="1901157141663662859">"Lugha ya mfumo"</string>
     <string name="locale_remove_menu" msgid="3521546263421387474">"Ondoa"</string>
-    <string name="add_a_language" msgid="2126220398077503271">"Ongeza lugha nyingine"</string>
+    <string name="add_a_language" msgid="2126220398077503271">"Ongeza lugha"</string>
     <string name="app_locale_preference_title" msgid="5513627099300360232">"Lugha"</string>
     <string name="locale_picker_category_title" msgid="6212064706962721255">"Lugha Inayopendelewa"</string>
     <string name="app_locales_picker_menu_title" msgid="7617427959223831373">"Lugha za programu"</string>
