--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -3461,7 +3461,7 @@
     <string name="device_feedback" msgid="5351614458411688608">"发送有关此设备的反馈"</string>
     <string name="restr_pin_enter_admin_pin" msgid="4435410646541671918">"输入管理员 PIN 码"</string>
     <string name="switch_on_text" msgid="5664542327776075105">"开启"</string>
-    <string name="switch_off_text" msgid="1315547447393646667">"关闭"</string>
+    <string name="switch_off_text" msgid="1315547447393646667">"已关闭"</string>
     <string name="nfc_setting_on" msgid="7701896496026725772">"已开启"</string>
     <string name="nfc_setting_off" msgid="7142103438532732309">"已关闭"</string>
     <string name="screen_pinning_switch_on_text" msgid="6971386830247542552">"已开启"</string>
